# MicroMess

./: README.md
ChatService/: CMakeLists.txt
ChatService/client/: client.cpp  client.hpp  main.cpp
ChatService/server/: main.cpp  server.cpp  server.hpp
ChatService/utils/: chat_utils.cpp  chat_utils.hpp  message.cpp  message.hpp
